--- a/Exercicios/ex024/fundo006.html
+++ b/Exercicios/ex024/fundo006.html
@@ -14,6 +14,7 @@
             background-position: center top;
             background-size: 100%;
             background-size: cover;
+            background-attachment: fixed;
         }
         main {
             background-color: white;
@@ -22,6 +23,8 @@
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
+            
+            
         }
     </style>
 </head>
