--- a/Desafios/desafio 12/index.html
+++ b/Desafios/desafio 12/index.html
@@ -96,7 +96,7 @@
                 Deixe que Deus interprete.
             </p>
         </section>
-        <a href="audio/audio01.mp3">
+        <a href="audio/audio01.mp3" target="_blank">
             <h3>Clique Aqui e Tenha uma Experiência Incrivel</h3>
         </a>
 
